--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,30 @@
+# Navigate to your project directory
+cd ELITECORPORATION_NODEJS-M...
+
+# Create/verify .gitignore file
+cat > .gitignore << EOL
 # Dependencies
 node_modules/
 
 # Environment variables
 .env
+
+# Logs
+logs
+*.log
+npm-debug.log*
+
+# Runtime data
+pids
+*.pid
+*.seed
+*.pid.lock
+
+# Coverage directory used by tools like istanbul
+coverage
+
+# nyc test coverage
+.nyc_output
 
 # Optional npm cache directory
 .npm
@@ -46,3 +68,4 @@ node_modules/
 
 # TernJS port file
 .tern-port
+EOL
